--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,20 @@
 /*  your css code here. If applicable */
+body{
+	background-color : #cccccc ;
+}
+h1{
+	text-align : center ;
+}
+div{
+	background-color : white ;
+	border : 1px solid black ;
+}
+li{
+	list-style-type : none ;
+}
+#div{
+	backgroung-color : white;
+}
+h2{
+	text-align : center ;
+}
